Refactored exercises to use proficiency.css

--- a/AV/Development/ClickHandlerTest.html
+++ b/AV/Development/ClickHandlerTest.html
@@ -5,31 +5,14 @@
         <title>Test</title>
         <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
         <link rel="stylesheet" href="opendsaAV.css" type="text/css" />
+        <link rel="stylesheet" href="proficiency.css" type="text/css" />
     </head>
 
     <body>
         <style>
-          #jsavcontainer {
-            min-width: 700px;
-            height: 650px;
-            background-color: #fff;
-          }
-          p.instructLabel {
-            margin-top: -5px;
-          }
-          p.instructions {
-            margin-top: -15px;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid black;
-          }
           .jsavlist {
             padding: 20px;
           }
-          .selected, .selected .jsavvalue, .jsavarray.jsavbararray .jsavindex.selected .jsavvalue{
-            font-size: 130%;
-            background-color: #ddf;
-        }
         </style>
         <h1>Test</h1>
         <div id="jsavcontainer">
