--- a/AV/Development/insertionSort.html
+++ b/AV/Development/insertionSort.html
@@ -5,29 +5,13 @@
         <title>Insertion Sort</title>
         <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
         <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+        <link rel="stylesheet" href="proficiency.css" type="text/css" />
     </head>
 
     <body>
         <style>
           #jsavcontainer {
-            width: 740px;
             height: 530px;
-            background-color: #fff;
-          }
-          p.jsavoutput.jsavline {
-            height: 40px;
-          }
-          .jsavscore {
-            text-align: center;
-          }
-          p.instructLabel {
-            margin-top: -5;
-          }
-          p.instructions {
-            margin-top: -15px;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid black;
           }
         </style>
         <h1>Insertion Sort</h1>
