--- a/AV/Development/BST-insert-proficiency.html
+++ b/AV/Development/BST-insert-proficiency.html
@@ -5,48 +5,16 @@
         <title>BST Insert</title>
         <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
         <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+        <link rel="stylesheet" href="proficiency.css" type="text/css" />
     </head>
 
     <body>
         <style>
-          #jsavcontainer {
-            width: 740px;
-            height: 650px;
-            background-color: #fff;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            -o-user-select: none;
-            user-select: none;
-          }
-          p.jsavoutput.jsavline {
-            height: 40px;
-          }
           .jsavnode {
             cursor: default;
           }
           .jsavtreenode {
             cursor: pointer;
-          }
-          .jsavtreenode.emptynode {
-            border: 1px dashed #777;
-          }
-          .jsavscore {
-            text-align: center;
-          }
-          p.instructLabel {
-            margin-top: -5px;
-          }
-          p.instructions {
-            margin-top: -15px;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid black;
-          }
-          .greybackground, .greybackground .jsavvalue, .jsavarray.jsavbararray .jsavindex.greybackground .jsavvalue{
-            background-color: #eee !important;
           }
         </style>
         <h1>BST Insert</h1>
