--- a/AV/Development/radixExchangeSort.html
+++ b/AV/Development/radixExchangeSort.html
@@ -5,20 +5,12 @@
         <title>Radix Exchange Sort</title>
         <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
         <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+        <link rel="stylesheet" href="proficiency.css" type="text/css" />
+
     </head>
 
     <body>
         <style>
-          #jsavcontainer {
-            width: 740px;
-            height: 650px;
-            background-color: #fff;
-            -moz-user-select: -moz-none;
-            -khtml-user-select: none;
-            -webkit-user-select: none;
-            -o-user-select: none;
-            user-select: none;
-          }
           .jsavnode {
             cursor: pointer;
           }
@@ -28,21 +20,8 @@
           span.jsavvaluelabel {
             padding: 0px 5px;
           }
-          p.instructLabel {
-            margin-top: -5px;
-          }
-          p.instructions {
-            margin-top: -15px;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid black;
-          }
           .selected, .selected .jsavvalue, .jsavarray.jsavbararray .jsavindex.selected .jsavvalue{
             font-size: 100%;
-            background-color: #ddf !important;
-          }
-          .greybg, .greybg .jsavvalue, .jsavarray.jsavbararray .jsavindex.greybg .jsavvalue{
-            background-color: #eee;
           }
           span.bit {
             color: #ccc;
