--- a/khan-exercises/exercises/khan-site.html
+++ b/khan-exercises/exercises/khan-site.html
@@ -6,22 +6,6 @@
     </head>
     <body class="light">
     <div class="clearfix new-header" id="outer-wrapper">
-    <div id="top-header-container">
-        <div class="new" id="top-header">
-            <nav class="sitewide-navigation">
-                <span class="links nav-subheader">
-                    <span class="dropdown topic-browser-dropdown">
-                        <a href="http://khanacademy.org/library" class="no-menu">Learn</a>
-                        <a href="http://khanacademy.org/class_profile" class="no-menu">Coach</a>
-                        <div style="clear: both"></div>
-                    </span>
-                </span>
-            </nav>
-            <a href="http://khanacademy.org/" id="header-logo" data-tag="Header" title="Take me home!">
-                <img src="https://khan-academy.appspot.com/images/ka-simplified-logo-white.png">
-            </a>
-        </div>
-    </div>
     <div id="page-container">
     <div id="page-container-inner">
         <div id="fb-root"></div>
@@ -30,15 +14,14 @@
                         <div class="exercises-header"><h2 class="section-headline">
                                 <div class="topic-exercise-badge">&nbsp;</div>
                                 <span class="practice-exercise-topic-context">Practicing</span>
-                        </h2></div>
-                        <div>
-                            <span id = "pointsrecieve">get</span>
-                            <span>  /  </span>
-                            <span id = "pointsleft">100</span>
+                                <span style="margin-right:80px;"></span>
+                            <span style = "font-size:60%">Current score:&nbsp;</span>
+                            <span id = "pointsrecieve" style = "font-size:65%";font-weight:bold;> </span>
+                            <span style = "font-size:65%">out of &nbsp;<b>100</b></span>
+                        </h2>
                         </div>
  
                         <div class="exercises-body">
-                            <div class="exercises-stack">&nbsp;</div>
                             <div class="exercises-card current-card">
                                 <div class="current-card-container card-type-problem">
                                     <div class="current-card-container-inner vertical-shadow">
@@ -46,13 +29,6 @@
                                         </div>
                                     </div>
                                     <div class="single-exercise" id="extras">
-                                        <ul>
-                                            <li> <a href="" id="scratchpad-show" style="">Show scratchpad</a>
-                                                <span id="scratchpad-not-available" style="display: none;">Scratchpad not available</span>
-                                            </li>
-                                            <li class="debug-mode"> <a href="?debug">Debug mode</a></li>
-                                            <li> <a href="" id="problem-permalink">Problem permalink</a></li>
-                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -64,25 +40,8 @@
         </div>
     </div>
 
-    <div class="push"></div>
-    <footer id="footer">
-        <div class="footer-container">
-            <div class="row-fluid main-links">
-                <div class="span2 offset10" style="height: 160px">
-                    <img class="handtree" src="https://khan-academy.appspot.com/images/khan-logo-vertical-transparent.png">
-                </div>
-            </div>
-
-            <div class="row-fluid extra-links">
-                <div class="span4 offset8 copyright">
-                    © 2013 Khan Academy<br>
-                    Except where noted, all rights reserved.
-                </div>
-            </div>
-        </div>
-    </footer>
-    
-
+    <div class=""></div>
+    <footer></footer>
 </div>
 </body>
 </html>
