Modifying css and template of new version khan-exercise.

--- a/khan-exercises/exercises/khan-site.html
+++ b/khan-exercises/exercises/khan-site.html
@@ -17,7 +17,8 @@
                                 <span style="margin-right:80px;"></span>
                             <span style = "font-size:60%">Current score:&nbsp;</span>
                             <span id = "pointsrecieve" style = "font-size:65%";font-weight:bold;> </span>
-                            <span style = "font-size:65%">out of &nbsp;<b>100</b></span>
+                            <span style = "font-size:65%">out of &nbsp;</span>
+                            <span id = "pointstotal" style ="font-wight:bold; font-size:65%"> </span>
                         </h2>
                         </div>
  
