--- a/Exercises/Sorting/InssortSumm.html
+++ b/Exercises/Sorting/InssortSumm.html
@@ -4,8 +4,7 @@
   <title>Insertion Sort: Multiple Choice Summary</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script>urlBaseOverride = "../../khan-exercises/";</script>
-  <script src="../../khan-exercises/khan-exercise.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
 </head>
 <body>
   <div class="exercise" data-name="InssortMCQcomplex"></div>
