Updating DOM element according to the feedback from OpenPop.

--- a/Exercises/Development/LinkedListKAEx.html
+++ b/Exercises/Development/LinkedListKAEx.html
@@ -126,7 +126,7 @@
         <div class="validator-function">
         
          window.generatedList =  "< "+listel1 +" "+listel2 + " | " + listel3 +" "+listel4+" >";
-         return true;
+         return "openPop";
         </div>
       </div>
       <div class="hints">
