Update interface corresponding to the type of KA. We use the global variable 'OpenPopKa' to determine type of KA.

--- a/Exercises/Development/LinkedListKAEx.html
+++ b/Exercises/Development/LinkedListKAEx.html
@@ -25,7 +25,9 @@
    </style>
    
    <script type="text/javascript">
-   
+   // Indicate that this is a OpenPop exercise
+   window.OpenPopKa = true;
+  
    var lineObjOffsetTop = 2;
    
    function createTextAreaWithLines(id)
@@ -126,7 +128,7 @@
         <div class="validator-function">
         
          window.generatedList =  "< "+listel1 +" "+listel2 + " | " + listel3 +" "+listel4+" >";
-         return "openPop";
+         //return "openPop";
         </div>
       </div>
       <div class="hints">
