--- a/Exercises/Sorting/InssortSumm.html
+++ b/Exercises/Sorting/InssortSumm.html
@@ -4,7 +4,11 @@
   <title>Insertion Sort: Multiple Choice Summary</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script src="../../lib/odsaLoadKhan.js"></script>
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+  </script>
+  <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
+  <script src="../../lib/khan-exercise-min.js"></script>
 </head>
 <body>
   <div class="exercise" data-name="InssortMCQcomplex"></div>
